fix overflow carousel

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;;
+}
+
 @media (min-width: 992px)
 {
     .navbar-expand-lg .navbar-nav .nav-link {
